# CarrotCompiler

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  compiler
.github/workflows/: cmake.yml
cmake/: LLVMIRTest.cmake  RISCVTest.cmake
parser/: parser.cpp  parser.hpp  tokens.cpp  tokens.hpp
runtime/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/ir/: CMakeLists.txt  genIR.cpp  genIR.h  genIR.hpp  ir.cpp  ir.h  ir.hpp
src/opt/: BasicOperation.cpp  BasicOperation.h  CMakeLists.txt  CombineInstr.cpp  CombineInstr.h  ConstSpread.cpp  ConstSpread.h  DeleteDeadCode.cpp  DeleteDeadCode.h  FunctionInline.cpp  FunctionInline.h  InstructionSubstitution.cpp  InstructionSubstitution.h  Loop.cpp  Loop.h  LoopInvariant.cpp  LoopInvariant.h  SimplifyJump.cpp  SimplifyJump.h  opt.cpp  opt.h  opt.hpp
src/parser/: CMakeLists.txt  ast.cpp  ast.h  ast.hpp  define.h  parser.cpp  parser.hpp  parser.y  tokens.cpp  tokens.hpp  tokens.l
src/riscv/: CMakeLists.txt  LoopInfo.cpp  LoopInfo.h  backend.cpp  backend.h  backend.hpp  instruction.cpp  instruction.h  instruction.hpp  optimize.cpp  optimize.h  regAnalysis.cpp  regAnalysis.h  regalloc.cpp  regalloc.h  regalloc.hpp  register.cpp  register.h  riscv.cpp  riscv.h  riscv.hpp
src/utils/: CMakeLists.txt  utils.cpp
test/: CMakeLists.txt  case
